[gd_scene load_steps=21 format=3 uid="uid://cqtty7lrvbm0a"]

[ext_resource type="Script" uid="uid://chlwbioy2akg7" path="res://scripts/menu_ui.gd" id="1_tlx78"]
[ext_resource type="Texture2D" uid="uid://3yhk5ufsn5ut" path="res://assets/BG/UI LAYOUTS.png" id="2_fkk5t"]
[ext_resource type="Texture2D" uid="uid://b7ad0jusytrwq" path="res://assets/GUI/Menu Assets/StartM.png" id="3_fkk5t"]
[ext_resource type="Texture2D" uid="uid://dujwnist601s6" path="res://assets/GUI/Menu Assets/OptionsM.png" id="4_fkk5t"]
[ext_resource type="Texture2D" uid="uid://bm2huvlu5oq62" path="res://assets/GUI/Menu Assets/QuitM.png" id="5_7vtdj"]
[ext_resource type="Texture2D" uid="uid://cfmpevqn0vaed" path="res://assets/GUI/099.png" id="6_fkk5t"]
[ext_resource type="PackedScene" uid="uid://qvgqap54c1b1" path="res://scenes/UI/options.tscn" id="7_7vtdj"]
[ext_resource type="AudioStream" uid="uid://dt2b5784r6j06" path="res://assets/Audios/button.wav" id="8_olqsj"]
[ext_resource type="Theme" uid="uid://bxycdq0lkine8" path="res://balloonthemehuhu.tres" id="8_sfva6"]
[ext_resource type="AudioStream" uid="uid://c6eelof6nh0xx" path="res://assets/Audios/menu_start.wav" id="9_sfva6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fcije"]
texture = ExtResource("3_fkk5t")
modulate_color = Color(0.526423, 0.526423, 0.526423, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2ux5y"]
texture = ExtResource("3_fkk5t")
modulate_color = Color(1.3, 1.3, 1.3, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4v3q3"]
texture = ExtResource("3_fkk5t")

[sub_resource type="ButtonGroup" id="ButtonGroup_2ux5y"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7xew8"]
texture = ExtResource("4_fkk5t")
modulate_color = Color(0.526423, 0.526423, 0.526423, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_svote"]
texture = ExtResource("4_fkk5t")
modulate_color = Color(1.3, 1.3, 1.3, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8miy4"]
texture = ExtResource("4_fkk5t")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_afy00"]
texture = ExtResource("5_7vtdj")
modulate_color = Color(0.526423, 0.526423, 0.526423, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jlyh1"]
texture = ExtResource("5_7vtdj")
modulate_color = Color(1.3, 1.3, 1.3, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3wkid"]
texture = ExtResource("5_7vtdj")

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_tlx78")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_fkk5t")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1917.0
offset_bottom = 1082.0
color = Color(0.113725, 0.113725, 0.113725, 0.505882)

[node name="Title" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 161.0
offset_top = 33.0
offset_right = 1781.0
offset_bottom = 778.0
texture = ExtResource("6_fkk5t")

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 48.05
anchor_bottom = 26.894
offset_left = 769.0
offset_top = 605.0
offset_right = -745.187
offset_bottom = -62.947
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxTexture_fcije")
theme_override_styles/hover = SubResource("StyleBoxTexture_2ux5y")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fcije")
theme_override_styles/normal = SubResource("StyleBoxTexture_4v3q3")
toggle_mode = true
button_group = SubResource("ButtonGroup_2ux5y")

[node name="Options" type="Button" parent="."]
layout_mode = 0
offset_left = 1244.0
offset_top = 640.0
offset_right = 1570.25
offset_bottom = 966.25
theme_override_styles/focus = SubResource("StyleBoxTexture_7xew8")
theme_override_styles/hover = SubResource("StyleBoxTexture_svote")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7xew8")
theme_override_styles/normal = SubResource("StyleBoxTexture_8miy4")
toggle_mode = true
button_group = SubResource("ButtonGroup_2ux5y")

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 389.0
offset_top = 650.0
offset_right = 715.25
offset_bottom = 981.25
theme_override_styles/focus = SubResource("StyleBoxTexture_afy00")
theme_override_styles/hover = SubResource("StyleBoxTexture_jlyh1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_afy00")
theme_override_styles/normal = SubResource("StyleBoxTexture_3wkid")
toggle_mode = true
button_group = SubResource("ButtonGroup_2ux5y")

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Options" parent="GUI" instance=ExtResource("7_7vtdj")]
visible = false
theme = ExtResource("8_sfva6")

[node name="ButtonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_olqsj")
bus = &"SFX"

[node name="StartAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_sfva6")
bus = &"SFX"

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
